fix gaps in components.

--- a/src/components/FAQsection/FAQsection.css
+++ b/src/components/FAQsection/FAQsection.css
@@ -1,7 +1,7 @@
 .faq-column-container {
   display: flex;
   flex-direction: row;
-  gap: 5rem;
+  gap: clamp(2rem,8%,5rem);
   justify-content: center;
   padding: 7vh 5vw;
   align-items: start;
@@ -48,7 +48,7 @@
 }
 
 details[open] .faq-question {
-  padding-bottom: 2%;
+  padding-bottom: clamp(8px, 2%, 10px);
 }
 
 details[open] .faq-question::after {
@@ -78,18 +78,18 @@ details[open] .faq-answer {
   transition: transform 0.3s cubic-bezier(0.4, 0, 0.2, 1);
   font-size: 1.3rem;
   line-height: 1;
-  margin: 0 auto; 
+  margin: 0 auto;
 }
 
 details[open] .toggle-icon-container .toggle-icon {
   transform: rotate(45deg);
 }
-@media (width<960px) {
+@media (width<768px) {
   .faq-column-container {
     flex-direction: column;
     align-items: center;
     gap: 2rem;
-    padding: 7vh 1vw;
+    padding: 6vh 1vw;
   }
   .faq-item {
     width: 75vw;
